2008-10-28  Richard Hult  <richard@imendio.com>

	* src/quartz-style.c Small whitespace cleanup.

2008-10-28  Richard Hult  <richard@imendio.com>

	* src/quartz-style.c (get_context): Add helper for getting the
	context, will be used to clip to the area when necessary soon.
	(draw_arrow): Don't draw arrows for spin buttons, they are drawn
	by the button itself.
	- Change all drawing functions to use get_context.

2008-10-28  Richard Hult  <richard@imendio.com>

	* src/quartz-style.c (style_setup_rc_styles): Handle subclasses of
	treeview as well.

2008-10-28  Richard Hult  <richard@imendio.com>

	* src/quartz-style.c (draw_handle): Implement drawing paned
	handles.

2008-10-28  Richard Hult  <richard@imendio.com>

	* src/quartz-style.c (style_setup_rc_styles): Use tooltip colors
	from the color scheme.

2008-10-28  Richard Hult  <richard@imendio.com>

	* theme/gtkrc: Add a color scheme.

2008-04-08  Richard Hult  <richard@imendio.com>

	* src/quartz-style.c: (draw_arrow), (draw_extension): Small coding
	style cleanups.

2008-04-08  Richard Hult  <richard@imendio.com>

	* src/*: More style cleanups, make all the rc style definitions
	use the macros. Add copyright information and header guards.

2008-04-07  Richard Hult  <richard@imendio.com>

	* src/quartz-rc-style.h:
	* src/quartz-style.c:
	* src/quartz-style.h:
	* src/test.c: More style fixes.

2008-04-07  Richard Hult  <richard@imendio.com>

	* src/quartz-draw.c:
	* src/quartz-style.c: Coding style fixes.

2008-04-07  Richard Hult  <richard@imendio.com>

	* src/quartz-style.c: (draw_arrow): Fix typo, makes arrowing
	drawing work.

2007-04-07  Alberto Ruiz <aruiz@gnome.org>

	* Initial commit.