@@ -1,3 +1,9 @@
+2008-10-29  Richard Hult  <richard@imendio.com>
+
+	* src/quartz-style.c: (draw_shadow): Improve the look of scrolled
+	window, frame, entry. Remove broken notebook code for now, it's
+	not useful in its current state.
+
 2008-10-28  Richard Hult  <richard@imendio.com>
 
 	* src/quartz-style.c Small whitespace cleanup.
